--- a/gallery.html
+++ b/gallery.html
@@ -44,7 +44,7 @@
     <div class="container">
         <div class="footer-content">
             <div class="footer-logo">
-                <img src="assets/logo/aarya_logo_1a.jpg" alt="Aarya Convention" class="footer-logo-img">
+                <img src="assets/logo/aarya_logo_3.png" alt="Aarya Convention" class="footer-logo-img">
                 <p class="tagline">Hyderabad's Biggest Resort Convention</p>
             </div>
             <div class="footer-links">
